--- a/package.json
+++ b/package.json
@@ -6,16 +6,28 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^18.16.3",
+    "@types/react": "^18.2.2",
+    "@types/react-dom": "^18.2.3",
+    "body-parser": "^1.20.2",
+    "browserify-zlib": "^0.2.0",
+    "express": "^4.18.2",
+    "mongo": "^0.1.0",
     "mongoose": "^7.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^5.0.1"
+    "react-hook-form": "^7.43.9",
+    "react-scripts": "^5.0.1",
+    "typescript": "^5.0.4",
+    "url": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "nodemon nodeServer"
   },
   "eslintConfig": {
     "extends": "react-app"
