--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "nodemon nodeServer"
+    "dev": "nodemon nodeServer",
+    "node": "nodemon service.ts"
   },
   "eslintConfig": {
     "extends": "react-app"
