--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^18.16.3",
     "@types/react": "^18.2.2",
     "@types/react-dom": "^18.2.3",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "browserify-zlib": "^0.2.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongo": "^0.1.0",
     "mongoose": "^7.1.0",
